--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       Access Denied<br />
      
     </div>
-    <a href="https://yourproject.example.com">Return to home page</a>
+    <a href="myproject">Return to home page</a>
   </div>
 </body>
 </html>
