--- a/JSON Generator.html
+++ b/JSON Generator.html
@@ -2,54 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DRM JSON Generator</title>
+  <title>Multi DRM JSON Generator</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
-    input, textarea, button { margin: 10px 0; padding: 8px; width: 100%; }
-    pre { background: #eee; padding: 10px; white-space: pre-wrap; word-wrap: break-word; }
+    body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; }
+    textarea, pre, button { width: 100%; padding: 10px; margin-top: 10px; }
+    label { font-weight: bold; display: block; margin-top: 20px; }
   </style>
 </head>
 <body>
 
-  <h2>DRM JSON Generator</h2>
+  <h2>DRM JSON Generator (Multi-Entry)</h2>
 
-  <label for="id">Unique ID:</label>
-  <input type="text" id="id" placeholder="Contoh: 9aB4xZ">
-
-  <label for="name">Channel Name:</label>
-  <input type="text" id="name" placeholder="Contoh: RTV">
-
-  <label for="key1">Key 1:</label>
-  <input type="text" id="key1" placeholder="Contoh: 87484c0b2a4c41b9b08249ef7817ad7f">
-
-  <label for="key2">Key 2:</label>
-  <input type="text" id="key2" placeholder="Contoh: ff4f3f232f747e5e7f616b4741fa5c32">
+  <label for="input">Masukkan data (format: key1:key2 ↵ nama):</label>
+  <textarea id="input" rows="10" placeholder="Contoh:
+d386001215594043a8995db796ad9e9c:3404792cb4c804902acdc6ca65c1a298
+RCTI
+e0cae84fe54d477f97b400b1e04646c7:dba64cb36b8ed1e759744efa93b00498
+RCTI WORLD
+036e85de0bb448eeb21d39ab300da48e:4c6f9b15dfab2a169b2b78a498c4d77d
+GTV"></textarea>
 
   <button onclick="generateJSON()">Generate JSON</button>
 
-  <h3>Output:</h3>
+  <label for="output">Hasil JSON:</label>
   <pre id="output">{}</pre>
 
   <script>
-    function generateJSON() {
-      const id = document.getElementById("id").value.trim();
-      const name = document.getElementById("name").value.trim();
-      const key1 = document.getElementById("key1").value.trim();
-      const key2 = document.getElementById("key2").value.trim();
+    function generateID(length = 6) {
+      const chars = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+      let result = '';
+      for (let i = 0; i < length; i++) {
+        result += chars.charAt(Math.floor(Math.random() * chars.length));
+      }
+      return result;
+    }
 
-      if (!id || !name || !key1 || !key2) {
-        alert("Semua kolom harus diisi!");
-        return;
+    function generateJSON() {
+      const input = document.getElementById("input").value.trim();
+      const lines = input.split('\n').map(line => line.trim()).filter(line => line !== '');
+      const result = {};
+      
+      for (let i = 0; i < lines.length - 1; i += 2) {
+        const key = lines[i];
+        const name = lines[i + 1];
+        if (key.includes(':') && name) {
+          const id = generateID();
+          result[id] = {
+            name: name,
+            key: key
+          };
+        }
       }
 
-      const json = {
-        [id]: {
-          name: name,
-          key: `${key1}:${key2}`
-        }
-      };
-
-      document.getElementById("output").textContent = JSON.stringify(json, null, 2);
+      document.getElementById("output").textContent = JSON.stringify(result, null, 2);
     }
   </script>
 
