--- a/JSON Generator.html
+++ b/JSON Generator.html
@@ -15,12 +15,9 @@
 
   <label for="input">Masukkan data (key1:key2 lalu nama channel):</label>
   <textarea id="input" rows="10" placeholder="Contoh:
-d386001215594043a8995db796ad9e9c:3404792cb4c804902acdc6ca65c1a298
-RCTI
-e0cae84fe54d477f97b400b1e04646c7:dba64cb36b8ed1e759744efa93b00498
-RCTI WORLD
-036e85de0bb448eeb21d39ab300da48e:4c6f9b15dfab2a169b2b78a498c4d77d
-GTV"></textarea>
+keyid:key
+iD
+</textarea>
 
   <button onclick="generateJSON()">Generate Inline JSON</button>
 
