--- a/JSON Generator.html
+++ b/JSON Generator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DRM JSON Inline Generator</title>
+  <title>JSON Inline Generator</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; }
     textarea, pre, button { width: 100%; padding: 10px; margin-top: 10px; }
@@ -14,7 +14,7 @@
   <h2>DRM JSON Generator (Inline Format)</h2>
 
   <label for="input">Masukkan data (key1:key2 lalu nama channel):</label>
-  <textarea id="input" rows="10" placeholder="Contoh:
+  <textarea id="input" rows="10" placeholder="
 keyid:key
 iD
 </textarea>
