--- a/JSON Generator.html
+++ b/JSON Generator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JSON Inline Generator</title>
+  <title>DRM JSON Inline Generator</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; }
     textarea, pre, button { width: 100%; padding: 10px; margin-top: 10px; }
@@ -15,9 +15,8 @@
 
   <label for="input">Masukkan data (key1:key2 lalu nama channel):</label>
   <textarea id="input" rows="10" placeholder="
-keyid:key
-iD
-</textarea>
+xxxxxxxxxxxxxxxxxxxx:xxxxxxxxxxxxxxxxxxxxx
+ID"></textarea>
 
   <button onclick="generateJSON()">Generate Inline JSON</button>
 
