--- a/JSON Generator.html
+++ b/JSON Generator.html
@@ -2,26 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DRM JSON Inline Generator</title>
+  <title>DRM JSON + Endpoint Generator</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; }
     textarea, pre, button { width: 100%; padding: 10px; margin-top: 10px; }
     label { font-weight: bold; display: block; margin-top: 20px; }
+    pre { background: #eee; white-space: pre-wrap; word-wrap: break-word; }
   </style>
 </head>
 <body>
 
-  <h2>DRM JSON Generator (Inline Format)</h2>
+  <h2>DRM JSON + Endpoint Generator</h2>
 
   <label for="input">Masukkan data (key1:key2 lalu nama channel):</label>
-  <textarea id="input" rows="10" placeholder="
-xxxxxxxxxxxxxxxxxxxx:xxxxxxxxxxxxxxxxxxxxx
-ID"></textarea>
+  <textarea id="input" rows="10" placeholder="Contoh:
+d386001215594043a8995db796ad9e9c:3404792cb4c804902acdc6ca65c1a298
+RCTI
+e0cae84fe54d477f97b400b1e04646c7:dba64cb36b8ed1e759744efa93b00498
+RCTI WORLD
+036e85de0bb448eeb21d39ab300da48e:4c6f9b15dfab2a169b2b78a498c4d77d
+GTV"></textarea>
 
-  <button onclick="generateJSON()">Generate Inline JSON</button>
+  <button onclick="generate()">Generate JSON & Endpoint</button>
 
-  <label for="output">Hasil Format JSON (Inline):</label>
-  <pre id="output">{}</pre>
+  <label for="jsonOutput">Output JSON Inline:</label>
+  <pre id="jsonOutput">{}</pre>
+
+  <label for="endpointOutput">Endpoint URLs:</label>
+  <pre id="endpointOutput">https://enc.portfalcon.workers.dev/license?k=...</pre>
 
   <script>
     function generateID(length = 6) {
@@ -33,23 +41,24 @@ ID"></textarea>
       return result;
     }
 
-    function generateJSON() {
+    function generate() {
       const input = document.getElementById("input").value.trim();
       const lines = input.split('\n').map(line => line.trim()).filter(line => line !== '');
-      const entries = [];
+      const jsonEntries = [];
+      const endpoints = [];
 
       for (let i = 0; i < lines.length - 1; i += 2) {
         const key = lines[i];
         const name = lines[i + 1];
         if (key.includes(':') && name) {
           const id = generateID();
-          const entry = `"${id}": { "name": "${name}", "key": "${key}" }`;
-          entries.push(entry);
+          jsonEntries.push(`"${id}": { "name": "${name}", "key": "${key}" }`);
+          endpoints.push(`https://enc.portfalcon.workers.dev/license?k=${id}`);
         }
       }
 
-      const output = entries.join(',\n');
-      document.getElementById("output").textContent = output || '{}';
+      document.getElementById("jsonOutput").textContent = jsonEntries.join(',\n') || '{}';
+      document.getElementById("endpointOutput").textContent = endpoints.join('\n') || 'Tidak ada data';
     }
   </script>
 
