--- a/JSON Generator.html
+++ b/JSON Generator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DRM JSON + Endpoint Generator</title>
+  <title>DRM Generator with M3U Output</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; }
     textarea, pre, button { width: 100%; padding: 10px; margin-top: 10px; }
@@ -12,24 +12,24 @@
 </head>
 <body>
 
-  <h2>DRM JSON + Endpoint Generator</h2>
+  <h2>DRM Generator: JSON + Endpoint + M3U</h2>
 
-  <label for="input">Masukkan data (key1:key2 lalu nama channel):</label>
+  <label for="input">Input: key:key lalu nama channel (setiap 2 baris):</label>
   <textarea id="input" rows="10" placeholder="Contoh:
 d386001215594043a8995db796ad9e9c:3404792cb4c804902acdc6ca65c1a298
 RCTI
-e0cae84fe54d477f97b400b1e04646c7:dba64cb36b8ed1e759744efa93b00498
-RCTI WORLD
-036e85de0bb448eeb21d39ab300da48e:4c6f9b15dfab2a169b2b78a498c4d77d
-GTV"></textarea>
+..."></textarea>
 
-  <button onclick="generate()">Generate JSON & Endpoint</button>
+  <button onclick="generateAll()">Generate Semua Output</button>
 
-  <label for="jsonOutput">Output JSON Inline:</label>
+  <label for="jsonOutput">🔹 JSON Inline Output:</label>
   <pre id="jsonOutput">{}</pre>
 
-  <label for="endpointOutput">Endpoint URLs:</label>
+  <label for="endpointOutput">🔹 URL License Output:</label>
   <pre id="endpointOutput">https://enc.portfalcon.workers.dev/license?k=...</pre>
+
+  <label for="m3uOutput">🔹 M3U Format Output:</label>
+  <pre id="m3uOutput">#EXTINF...</pre>
 
   <script>
     function generateID(length = 6) {
@@ -41,24 +41,35 @@ GTV"></textarea>
       return result;
     }
 
-    function generate() {
+    function generateAll() {
       const input = document.getElementById("input").value.trim();
       const lines = input.split('\n').map(line => line.trim()).filter(line => line !== '');
       const jsonEntries = [];
       const endpoints = [];
+      const m3uEntries = [];
 
       for (let i = 0; i < lines.length - 1; i += 2) {
         const key = lines[i];
         const name = lines[i + 1];
         if (key.includes(':') && name) {
           const id = generateID();
+          const endpoint = `https://enc.portfalcon.workers.dev/license?k=${id}`;
+
           jsonEntries.push(`"${id}": { "name": "${name}", "key": "${key}" }`);
-          endpoints.push(`https://enc.portfalcon.workers.dev/license?k=${id}`);
+          endpoints.push(endpoint);
+
+          const m3u = `#EXTINF:-1 tvg-id="${name}" tvg-logo="" group-title="", ${name}
+#EXTVLCOPT:http-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (Ktesttemp, like Gecko) Chrome/90.0.4430.85 Safari/537.36
+#EXTVLCOPT:http-referrer=https://visionplus.id/
+#KODIPROP:inputstream.adaptive.license_type=org.w3.clearkey
+#KODIPROP:inputstream.adaptive.license_key=${endpoint}`;
+          m3uEntries.push(m3u);
         }
       }
 
       document.getElementById("jsonOutput").textContent = jsonEntries.join(',\n') || '{}';
       document.getElementById("endpointOutput").textContent = endpoints.join('\n') || 'Tidak ada data';
+      document.getElementById("m3uOutput").textContent = m3uEntries.join('\n\n') || '#EXTINF...';
     }
   </script>
 
