--- a/uh/admin.html
+++ b/uh/admin.html
@@ -2,45 +2,121 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Admin - Input Soal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style> textarea {font-family: monospace;} </style>
+  <title>Ulangan Kelas 6</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
+    .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 8px; }
+    h1 { text-align: center; }
+    .soal { margin-bottom: 20px; padding: 15px; border: 1px solid #ddd; border-radius: 6px; background: #fafafa; }
+    img { max-width: 100%; height: auto; margin-top: 10px; }
+    table { border-collapse: collapse; margin-top: 10px; width: 100%; }
+    table, th, td { border: 1px solid #444; padding: 6px; text-align: center; }
+    .options label { display: block; margin-top: 5px; }
+    .submit-btn { display: block; width: 100%; padding: 12px; background: green; color: white; border: none; border-radius: 6px; font-size: 16px; cursor: pointer; }
+    .submit-btn:hover { background: darkgreen; }
+  </style>
 </head>
-<body class="bg-light">
-<div class="container py-5">
-  <div class="card p-4">
-    <h4>🔑 Halaman Admin - Input Soal</h4>
-    <div id="loginBox">
-      <input type="password" id="adminPass" class="form-control mb-2" placeholder="Masukkan Password">
-      <button class="btn btn-primary" onclick="loginAdmin()">Login</button>
-    </div>
-    <div id="adminPanel" class="d-none">
-      <p>Edit soal dalam format JSON:</p>
-      <textarea id="jsonInput" class="form-control" rows="15"></textarea>
-      <button class="btn btn-success mt-3" onclick="saveJSON()">Simpan Soal</button>
-    </div>
+<body>
+  <div class="container">
+    <h1>Ulangan Harian Kelas 6</h1>
+    <form id="quizForm"></form>
+    <button type="button" class="submit-btn" onclick="submitQuiz()">Kumpulkan Jawaban</button>
   </div>
-</div>
-<script>
-const ADMIN_PASSWORD="12345";
-let soal=JSON.parse(localStorage.getItem("soalData"))||{
-  "Pendidikan Pancasila":[],"Bahasa Indonesia":[],"Matematika":[],"IPAS":[],"Seni Rupa":[]
-};
-function loginAdmin(){
-  if(document.getElementById("adminPass").value===ADMIN_PASSWORD){
-    document.getElementById("loginBox").classList.add("d-none");
-    document.getElementById("adminPanel").classList.remove("d-none");
-    document.getElementById("jsonInput").value=JSON.stringify(soal,null,2);
-  }else alert("Password salah!");
-}
-function saveJSON(){
-  try{
-    soal=JSON.parse(document.getElementById("jsonInput").value);
-    localStorage.setItem("soalData",JSON.stringify(soal));
-    alert("Soal berhasil disimpan!");
-  }catch(e){alert("Format JSON tidak valid!");}
-}
-</script>
+
+  <script>
+    // Contoh soal JSON (4 tipe: pilihan ganda, isian, gambar, tabel)
+    const soalData = [
+      {
+        "text": "Siapakah pencetus Pancasila?",
+        "type": "multiple-choice",
+        "options": ["Soekarno", "Hatta", "Sudirman", "Yamin"],
+        "answer": "a"
+      },
+      {
+        "text": "Tuliskan nama ibu kota Indonesia!",
+        "type": "essay",
+        "answer": "Jakarta"
+      },
+      {
+        "text": "Perhatikan gambar berikut. Apa nama hewan pada gambar?",
+        "type": "image",
+        "image": "https://upload.wikimedia.org/wikipedia/commons/7/73/Lion_waiting_in_Namibia.jpg",
+        "options": ["Harimau", "Singa", "Macan Tutul", "Cheetah"],
+        "answer": "b"
+      },
+      {
+        "text": "Hitunglah hasil dari tabel berikut: berapa jumlah keseluruhan siswa laki-laki dan perempuan?",
+        "type": "table",
+        "table": [
+          ["Kelas", "Laki-laki", "Perempuan"],
+          ["6A", "15", "13"],
+          ["6B", "12", "14"]
+        ],
+        "answer": "54"
+      }
+    ];
+
+    // Render soal
+    const quizForm = document.getElementById("quizForm");
+
+    soalData.forEach((soal, index) => {
+      const div = document.createElement("div");
+      div.className = "soal";
+
+      let html = `<p><b>${index + 1}. ${soal.text}</b></p>`;
+
+      if (soal.type === "multiple-choice" && soal.options) {
+        html += '<div class="options">';
+        soal.options.forEach((opt, i) => {
+          const abjad = String.fromCharCode(97 + i); // a,b,c,...
+          html += `
+            <label>
+              <input type="radio" name="q${index}" value="${abjad}"> ${opt}
+            </label>`;
+        });
+        html += '</div>';
+      } 
+      else if (soal.type === "essay") {
+        html += `<input type="text" name="q${index}" style="width:100%; padding:6px;">`;
+      } 
+      else if (soal.type === "image") {
+        html += `<img src="${soal.image}" alt="gambar soal">`;
+        html += '<div class="options">';
+        soal.options.forEach((opt, i) => {
+          const abjad = String.fromCharCode(97 + i);
+          html += `
+            <label>
+              <input type="radio" name="q${index}" value="${abjad}"> ${opt}
+            </label>`;
+        });
+        html += '</div>';
+      } 
+      else if (soal.type === "table") {
+        html += "<table>";
+        soal.table.forEach((row, rIndex) => {
+          html += "<tr>";
+          row.forEach(cell => {
+            html += rIndex === 0 ? `<th>${cell}</th>` : `<td>${cell}</td>`;
+          });
+          html += "</tr>";
+        });
+        html += "</table>";
+        html += `<p>Jawaban: <input type="text" name="q${index}" style="width:100%; padding:6px;"></p>`;
+      }
+
+      div.innerHTML = html;
+      quizForm.appendChild(div);
+    });
+
+    function submitQuiz() {
+      const data = new FormData(quizForm);
+      let hasil = {};
+      data.forEach((val, key) => {
+        hasil[key] = val;
+      });
+      alert("Jawaban Anda:\n" + JSON.stringify(hasil, null, 2));
+    }
+  </script>
 </body>
 </html>
