--- a/uh/siswa.html
+++ b/uh/siswa.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    img.soal-img {max-width:100%; height:auto; margin:10px 0;}
-    .soal-paragraph {background:#f8f9fa; padding:10px; border-radius:6px;}
-    .soal-table {margin:10px 0;}
+    img { max-width: 100%; height: auto; margin: 10px 0; }
+    table { border-collapse: collapse; width: 100%; margin: 10px 0; }
+    table, th, td { border: 1px solid #333; padding: 6px; text-align: center; }
   </style>
 </head>
 <body class="bg-light">
@@ -31,6 +31,7 @@
       </select>
     </div>
     <button class="btn btn-primary mb-3" onclick="loadQuestions()">Mulai</button>
+
     <form id="quizForm" class="d-none">
       <div id="questionContainer"></div>
       <button type="button" class="btn btn-success mt-3" onclick="submitAnswers()">Kumpulkan Jawaban</button>
@@ -43,66 +44,78 @@
 let soal = JSON.parse(localStorage.getItem("soalData")) || {};
 
 function loadQuestions(){
-  const subject=document.getElementById("subjectSelect").value;
-  const name=document.getElementById("studentName").value.trim();
-  if(!subject||!name){alert("Isi nama & mapel!");return;}
+  const subject = document.getElementById("subjectSelect").value;
+  const name = document.getElementById("studentName").value.trim();
+  if(!subject || !name){ alert("Isi nama & pilih mapel!"); return; }
 
-  const container=document.getElementById("questionContainer");
-  container.innerHTML="";
+  const container = document.getElementById("questionContainer");
+  container.innerHTML = "";
 
   soal[subject].forEach((q,i)=>{
-    let content="";
-    if(q.type==="image"){
-      content=`<p><b>${i+1}. ${q.text}</b></p>
-               <img src="${q.image}" alt="Soal Gambar" class="soal-img">`;
-    }else if(q.type==="table"){
-      content=`<p><b>${i+1}. ${q.text}</b></p>
-               <div class="soal-table">${q.table}</div>`;
-    }else if(q.type==="paragraph"){
-      content=`<p><b>${i+1}. Pertanyaan berbasis paragraf:</b></p>
-               <div class="soal-paragraph">${q.text}</div>`;
-    }else{ // default text
-      content=`<p><b>${i+1}. ${q.text}</b></p>`;
+    let html = `<div class="p-3 border rounded mb-2">
+      <p><b>${i+1}. ${q.text}</b></p>`;
+
+    // tipe soal
+    if(q.type === "multiple-choice"){
+      html += q.options.map((opt,j)=>`
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
+          <label class="form-check-label">${opt}</label>
+        </div>`).join("");
     }
 
-    const optionsHTML=q.options.map((opt,j)=>`
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
-        <label class="form-check-label">${opt}</label>
-      </div>`).join("");
+    if(q.type === "essay"){
+      html += `<input type="text" class="form-control" name="q${i}" placeholder="Jawabanmu">`;
+    }
 
-    container.innerHTML+=`
-      <div class="p-3 border rounded mb-3">
-        ${content}
-        ${optionsHTML}
-      </div>`;
+    if(q.type === "image"){
+      html += `<img src="${q.image}" alt="Soal Gambar">`;
+      html += q.options.map((opt,j)=>`
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
+          <label class="form-check-label">${opt}</label>
+        </div>`).join("");
+    }
+
+    if(q.type === "table"){
+      html += `<table>`;
+      q.table.forEach(row=>{
+        html += `<tr>${row.map(cell=>`<td>${cell}</td>`).join("")}</tr>`;
+      });
+      html += `</table>`;
+      html += `<input type="text" class="form-control" name="q${i}" placeholder="Jawabanmu">`;
+    }
+
+    html += `</div>`;
+    container.innerHTML += html;
   });
 
   document.getElementById("quizForm").classList.remove("d-none");
 }
 
 function submitAnswers(){
-  const subject=document.getElementById("subjectSelect").value;
-  const name=document.getElementById("studentName").value.trim();
-  let score=0;
+  const subject = document.getElementById("subjectSelect").value;
+  const name = document.getElementById("studentName").value.trim();
+  let score = 0;
 
   soal[subject].forEach((q,i)=>{
-    const ans=document.querySelector(\`input[name="q\${i}"]:checked\`);
-    if(ans && ans.value===q.answer) score+=10;
+    let ans;
+    if(q.type==="multiple-choice" || q.type==="image"){
+      let sel = document.querySelector(`input[name="q${i}"]:checked`);
+      if(sel) ans = sel.value;
+    } else {
+      ans = document.querySelector(`[name="q${i}"]`).value.trim();
+    }
+    if(ans && ans.toLowerCase() === q.answer.toLowerCase()) score += 10;
   });
 
   document.getElementById("result").classList.remove("d-none");
-  document.getElementById("result").innerText=\`\${name} mendapat skor \${score}\`;
+  document.getElementById("result").innerText = `${name} mendapat skor ${score}`;
 
   // simpan hasil ke localStorage
-  let hasil=JSON.parse(localStorage.getItem("hasilSiswa"))||[];
-  hasil.push({
-    nama:name,
-    mapel:subject,
-    skor:score,
-    tanggal:new Date().toLocaleString()
-  });
-  localStorage.setItem("hasilSiswa",JSON.stringify(hasil));
+  let hasil = JSON.parse(localStorage.getItem("hasilSiswa")) || [];
+  hasil.push({nama:name, mapel:subject, skor:score, tanggal:new Date().toLocaleString()});
+  localStorage.setItem("hasilSiswa", JSON.stringify(hasil));
 }
 </script>
 </body>
