--- a/uh/admin.html
+++ b/uh/admin.html
@@ -2,162 +2,91 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Admin Input Soal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin - Input Soal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 20px; }
-    .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 8px; }
-    h1 { text-align: center; }
-    label { font-weight: bold; display: block; margin-top: 10px; }
-    input, select, textarea { width: 100%; padding: 8px; margin-top: 5px; border: 1px solid #ccc; border-radius: 4px; }
-    .hidden { display: none; }
-    .options input { margin-bottom: 5px; }
-    .btn { padding: 10px 20px; margin-top: 15px; border: none; cursor: pointer; border-radius: 6px; }
-    .btn-add { background: green; color: white; }
-    .btn-add:hover { background: darkgreen; }
-    .btn-row { background: dodgerblue; color: white; margin-top: 5px; }
-    .btn-row:hover { background: navy; }
-    pre { background: #222; color: #0f0; padding: 15px; border-radius: 6px; overflow-x: auto; }
+    textarea {font-family: monospace;}
+    pre {background:#f8f9fa; padding:10px; border-radius:6px;}
   </style>
 </head>
-<body>
-  <div class="container">
-    <h1>Admin Input Soal</h1>
-
-    <label for="soalText">Teks Soal:</label>
-    <textarea id="soalText" rows="3"></textarea>
-
-    <label for="soalType">Tipe Soal:</label>
-    <select id="soalType" onchange="updateForm()">
-      <option value="multiple-choice">Pilihan Ganda</option>
-      <option value="essay">Esai</option>
-      <option value="image">Gambar</option>
-      <option value="table">Tabel</option>
-    </select>
-
-    <!-- Input untuk pilihan ganda -->
-    <div id="mcOptions">
-      <label>Opsi Jawaban:</label>
-      <input type="text" id="optA" placeholder="Opsi A">
-      <input type="text" id="optB" placeholder="Opsi B">
-      <input type="text" id="optC" placeholder="Opsi C">
-      <input type="text" id="optD" placeholder="Opsi D">
-      <label for="answer">Jawaban Benar (a/b/c/d):</label>
-      <input type="text" id="answer" placeholder="contoh: a">
+<body class="bg-light">
+<div class="container py-5">
+  <div class="card p-4 shadow">
+    <h4>🔑 Halaman Admin - Input Soal</h4>
+    <div id="loginBox">
+      <input type="password" id="adminPass" class="form-control mb-2" placeholder="Masukkan Password">
+      <button class="btn btn-primary" onclick="loginAdmin()">Login</button>
     </div>
-
-    <!-- Input untuk esai -->
-    <div id="essayOptions" class="hidden">
-      <label>Jawaban Benar:</label>
-      <input type="text" id="essayAnswer" placeholder="contoh: Jakarta">
+    <div id="adminPanel" class="d-none">
+      <p>Edit soal dalam format JSON (mendukung <code>text</code>, <code>image</code>, <code>table</code>, <code>paragraph</code>):</p>
+      <textarea id="jsonInput" class="form-control" rows="18"></textarea>
+      <button class="btn btn-success mt-3" onclick="saveJSON()">💾 Simpan Soal</button>
+      <hr>
+      <h6>Contoh Format Soal:</h6>
+<pre>{
+  "Pendidikan Pancasila": [
+    {
+      "type": "text",
+      "text": "Siapakah pencetus Pancasila?",
+      "options": ["Soekarno", "Hatta", "Sudirman", "Yamin"],
+      "answer": "a"
+    },
+    {
+      "type": "image",
+      "text": "Perhatikan gambar berikut, siapakah tokoh yang ada di gambar?",
+      "image": "soekarno.jpg",
+      "options": ["Soekarno", "Hatta", "Sudirman", "Tan Malaka"],
+      "answer": "a"
+    },
+    {
+      "type": "table",
+      "text": "Berdasarkan tabel berikut, manakah hasil perhitungan yang benar?",
+      "table": "&lt;table class='table table-bordered'&gt;&lt;tr&gt;&lt;th&gt;Bilangan&lt;/th&gt;&lt;th&gt;Hasil&lt;/th&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;5+3&lt;/td&gt;&lt;td&gt;8&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;7x2&lt;/td&gt;&lt;td&gt;14&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;",
+      "options": ["Semua benar", "Ada yang salah", "Hanya nomor 1 benar", "Hanya nomor 2 benar"],
+      "answer": "a"
+    },
+    {
+      "type": "paragraph",
+      "text": "Bacalah paragraf berikut: &lt;br&gt;&lt;br&gt; 'Pancasila merupakan dasar negara ...' &lt;br&gt;&lt;br&gt; Berdasarkan paragraf, sila manakah yang mencerminkan keadilan sosial?",
+      "options": ["Sila ke-2", "Sila ke-3", "Sila ke-4", "Sila ke-5"],
+      "answer": "d"
+    }
+  ]
+}</pre>
     </div>
-
-    <!-- Input untuk gambar -->
-    <div id="imageOptions" class="hidden">
-      <label>URL Gambar:</label>
-      <input type="text" id="imageUrl" placeholder="https://...">
-      <label>Opsi Jawaban:</label>
-      <input type="text" id="imgOptA" placeholder="Opsi A">
-      <input type="text" id="imgOptB" placeholder="Opsi B">
-      <input type="text" id="imgOptC" placeholder="Opsi C">
-      <input type="text" id="imgOptD" placeholder="Opsi D">
-      <label>Jawaban Benar (a/b/c/d):</label>
-      <input type="text" id="imgAnswer" placeholder="contoh: b">
-    </div>
-
-    <!-- Input untuk tabel -->
-    <div id="tableOptions" class="hidden">
-      <label>Tabel Data:</label>
-      <table id="tableInput" border="1" style="width:100%; margin-top:10px;">
-        <tr>
-          <td><input type="text" placeholder="Kolom 1"></td>
-          <td><input type="text" placeholder="Kolom 2"></td>
-        </tr>
-      </table>
-      <button type="button" class="btn btn-row" onclick="addRow()">+ Tambah Baris</button>
-      <label>Jawaban Benar:</label>
-      <input type="text" id="tableAnswer" placeholder="contoh: 54">
-    </div>
-
-    <button type="button" class="btn btn-add" onclick="addSoal()">+ Tambah Soal ke JSON</button>
-
-    <h2>Hasil JSON:</h2>
-    <pre id="jsonOutput">[]</pre>
   </div>
+</div>
 
-  <script>
-    let soalArray = [];
+<script>
+const ADMIN_PASSWORD="12345";
+let soal = JSON.parse(localStorage.getItem("soalData")) || {
+  "Pendidikan Pancasila": [],
+  "Bahasa Indonesia": [],
+  "Matematika": [],
+  "IPAS": [],
+  "Seni Rupa": []
+};
 
-    function updateForm() {
-      document.getElementById("mcOptions").classList.add("hidden");
-      document.getElementById("essayOptions").classList.add("hidden");
-      document.getElementById("imageOptions").classList.add("hidden");
-      document.getElementById("tableOptions").classList.add("hidden");
+function loginAdmin(){
+  if(document.getElementById("adminPass").value===ADMIN_PASSWORD){
+    document.getElementById("loginBox").classList.add("d-none");
+    document.getElementById("adminPanel").classList.remove("d-none");
+    document.getElementById("jsonInput").value=JSON.stringify(soal,null,2);
+  }else{
+    alert("Password salah!");
+  }
+}
 
-      let type = document.getElementById("soalType").value;
-      if (type === "multiple-choice") document.getElementById("mcOptions").classList.remove("hidden");
-      if (type === "essay") document.getElementById("essayOptions").classList.remove("hidden");
-      if (type === "image") document.getElementById("imageOptions").classList.remove("hidden");
-      if (type === "table") document.getElementById("tableOptions").classList.remove("hidden");
-    }
-
-    function addRow() {
-      let table = document.getElementById("tableInput");
-      let cols = table.rows[0].cells.length;
-      let row = table.insertRow();
-      for (let i = 0; i < cols; i++) {
-        let cell = row.insertCell();
-        cell.innerHTML = `<input type="text" placeholder="Data ${i+1}">`;
-      }
-    }
-
-    function addSoal() {
-      let text = document.getElementById("soalText").value;
-      let type = document.getElementById("soalType").value;
-      let soal = { text, type };
-
-      if (type === "multiple-choice") {
-        soal.options = [
-          document.getElementById("optA").value,
-          document.getElementById("optB").value,
-          document.getElementById("optC").value,
-          document.getElementById("optD").value
-        ];
-        soal.answer = document.getElementById("answer").value;
-      }
-      if (type === "essay") {
-        soal.answer = document.getElementById("essayAnswer").value;
-      }
-      if (type === "image") {
-        soal.image = document.getElementById("imageUrl").value;
-        soal.options = [
-          document.getElementById("imgOptA").value,
-          document.getElementById("imgOptB").value,
-          document.getElementById("imgOptC").value,
-          document.getElementById("imgOptD").value
-        ];
-        soal.answer = document.getElementById("imgAnswer").value;
-      }
-      if (type === "table") {
-        let table = document.getElementById("tableInput");
-        let rows = [];
-        for (let i = 0; i < table.rows.length; i++) {
-          let cells = [];
-          for (let j = 0; j < table.rows[i].cells.length; j++) {
-            let val = table.rows[i].cells[j].querySelector("input").value;
-            cells.push(val);
-          }
-          rows.push(cells);
-        }
-        soal.table = rows;
-        soal.answer = document.getElementById("tableAnswer").value;
-      }
-
-      soalArray.push(soal);
-      document.getElementById("jsonOutput").textContent = JSON.stringify(soalArray, null, 2);
-      
-      alert("Soal ditambahkan ke JSON!");
-    }
-  </script>
+function saveJSON(){
+  try{
+    soal = JSON.parse(document.getElementById("jsonInput").value);
+    localStorage.setItem("soalData",JSON.stringify(soal));
+    alert("✅ Soal berhasil disimpan!");
+  }catch(e){
+    alert("❌ Format JSON tidak valid!\n" + e.message);
+  }
+}
+</script>
 </body>
 </html>
