--- a/uh/siswa.html
+++ b/uh/siswa.html
@@ -7,14 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     img { max-width: 100%; height: auto; margin: 10px 0; }
-    table { border-collapse: collapse; width: 100%; margin: 10px 0; }
-    table, th, td { border: 1px solid #333; padding: 6px; text-align: center; }
+    .question-box { padding:15px; border:1px solid #ddd; border-radius:8px; margin-bottom:15px; background:#fff; }
+    table { margin:10px 0; }
   </style>
 </head>
 <body class="bg-light">
 <div class="container py-5">
-  <div class="card p-4">
-    <h4>📝 Halaman Ulangan</h4>
+  <div class="card p-4 shadow">
+    <h4>📝 Halaman Ulangan Siswa</h4>
     <div class="mb-3">
       <label>Nama Siswa</label>
       <input type="text" id="studentName" class="form-control">
@@ -36,6 +36,7 @@
       <div id="questionContainer"></div>
       <button type="button" class="btn btn-success mt-3" onclick="submitAnswers()">Kumpulkan Jawaban</button>
     </form>
+
     <div id="result" class="alert alert-info mt-3 d-none"></div>
   </div>
 </div>
@@ -52,20 +53,16 @@ function loadQuestions(){
   container.innerHTML = "";
 
   soal[subject].forEach((q,i)=>{
-    let html = `<div class="p-3 border rounded mb-2">
+    let html = `<div class="question-box">
       <p><b>${i+1}. ${q.text}</b></p>`;
 
     // tipe soal
-    if(q.type === "multiple-choice"){
+    if(q.type === "text" || q.type === "paragraph"){
       html += q.options.map((opt,j)=>`
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
           <label class="form-check-label">${opt}</label>
         </div>`).join("");
-    }
-
-    if(q.type === "essay"){
-      html += `<input type="text" class="form-control" name="q${i}" placeholder="Jawabanmu">`;
     }
 
     if(q.type === "image"){
@@ -78,12 +75,12 @@ function loadQuestions(){
     }
 
     if(q.type === "table"){
-      html += `<table>`;
-      q.table.forEach(row=>{
-        html += `<tr>${row.map(cell=>`<td>${cell}</td>`).join("")}</tr>`;
-      });
-      html += `</table>`;
-      html += `<input type="text" class="form-control" name="q${i}" placeholder="Jawabanmu">`;
+      html += q.table; // tabel sudah berupa HTML string
+      html += q.options.map((opt,j)=>`
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
+          <label class="form-check-label">${opt}</label>
+        </div>`).join("");
     }
 
     html += `</div>`;
@@ -100,12 +97,9 @@ function submitAnswers(){
 
   soal[subject].forEach((q,i)=>{
     let ans;
-    if(q.type==="multiple-choice" || q.type==="image"){
-      let sel = document.querySelector(`input[name="q${i}"]:checked`);
-      if(sel) ans = sel.value;
-    } else {
-      ans = document.querySelector(`[name="q${i}"]`).value.trim();
-    }
+    let sel = document.querySelector(`input[name="q${i}"]:checked`);
+    if(sel) ans = sel.value;
+
     if(ans && ans.toLowerCase() === q.answer.toLowerCase()) score += 10;
   });
 
