--- a/uh/siswa.html
+++ b/uh/siswa.html
@@ -2,7 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Ulangan Kelas 6</title>
+  <title>SDN 1 KANDANGAN KOTA</title>
+  <title>ULANGAN HARIAN KELAS 6</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -21,7 +22,7 @@
 <body class="bg-light">
 <div class="container py-5">
   <div class="card p-4 shadow">
-    <h4>📝 Halaman Ulangan Siswa</h4>
+    <h4>📝 Ulangan Harian</h4>
     <div class="mb-3">
       <label>Nama Siswa</label>
       <input type="text" id="studentName" class="form-control">
