--- a/uh/siswa.html
+++ b/uh/siswa.html
@@ -44,7 +44,7 @@
   
   <!-- KOP SEKOLAH -->
   <div class="kop">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Lambang_Kabupaten_Hulu_Sungai_Selatan.png" alt="Logo Sekolah">
+    <img src="https://oneon360.github.io/web/uh/logo-sdn1kk-wartatrans.png" alt="Logo Sekolah">
     <h2>SDN 1 KANDANGAN KOTA</h2>
     <h4>ULANGAN HARIAN KELAS 6</h4>
     <p>Tahun Pelajaran 2025</p>
