--- a/uh/siswa.html
+++ b/uh/siswa.html
@@ -53,7 +53,7 @@
   </div>
 
   <div class="card p-4 shadow">
-    <h5>📝 Halaman Ulangan Siswa</h5>
+    <h5>📝 Ulangan Siswa</h5>
     <div class="mb-3">
       <label>Nama Siswa</label>
       <input type="text" id="studentName" class="form-control">
